change connection and proxy

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_DEFAULT_API_URL = "http://localhost:3000"
+REACT_APP_DEFAULT_API_URL = "https://tokopedia-play-server-side-qrydtfbnb-wildan8.vercel.app/"
