--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://tokopedia-play-server-side-qrydtfbnb-wildan8.vercel.app/",
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   }
