--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_DEFAULT_API_URL = http://localhost:5000
+# change to local : http://localhost:5000
+REACT_APP_DEFAULT_API_URL = https://tokopedia-play-server-side.vercel.app
