adding .env explain

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # change to local : http://localhost:5000
 REACT_APP_DEFAULT_API_URL = https://tokopedia-play-server-side.vercel.app
+
+# change the value above with http://localhost:3000 for local running
